# terminus_store_prolog

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.fedora  Makefile  README.md  appveyor.yml  deploy.sh  make  make.sh  pack.pl  run_callgrind_swipl  run_gdb_swipl  run_swipl  run_valgrind_swipl
.ci/: install_swipl_dmg.sh
.github/workflows/: publish.yml
c/: blobs.c  blobs.h  error.c  error.h  prolog_list.c  prolog_list.h  terminus_store.c  terminus_store.h
docs/: logginghook.drawio
prolog/: terminus_store.pl
rust/: Cargo.toml  build.rs  cbindgen.toml  wrapper.h
rust/src/: blob.rs  builder.rs  csv.rs  layer.rs  lib.rs  named_graph.rs  store.rs  swipl.rs
rust/terminus-store-prolog-core/: Cargo.toml
rust/terminus-store-prolog-dylib/: Cargo.toml
rust/terminus-store-prolog-dylib/src/: lib.rs
script/: swiarch.pl  swipl  swipl-cmd.sh  swipl_callgrind  swipl_gdb  swipl_valgrind  test
src/: builder.rs  csv.rs  layer.rs  lib.rs  named_graph.rs  store.rs
