[package]
name = "prolog_story"
version = "0.1.0"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
swipl = {path="../swipl-rs/swipl"}
terminus-store = "=0.18.0"