[package]
name = "terminus_store_prolog_rewrite"
version = "0.1.0"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
swipl = "0.3"
#swipl = {path = "../swipl-rs/swipl"}
terminus-store = "^0.19.0"