[package]
name = "terminus-store-prolog"
version = "0.1.1"
authors = ["Matthijs van Otterdijk <matthijs@terminusdb.com>", "Robin de Rooij <robin@terminusdb.com>", "Gavin Mendel-Gleason <gavin@terminusdb.com>"]
edition = "2018"

[lib]
name = "terminus_store_prolog"
crate-type = ["cdylib"]

[dependencies]
terminus-store = {git="https://github.com/terminusdb/terminusdb-store.git", rev="73b7e12451408f56efce98fd69ed1a962d3a0536"}